upload all files

--- a/products/platingcoating/nickelplating/index.html
+++ b/products/platingcoating/nickelplating/index.html
@@ -8,7 +8,7 @@
   <title data-i18n-key="meta_title">น้ำยาชุบนิกเกิล (Nickel Plating Solutions) | Baume Chemical</title>
   <meta name="description" content="โซลูชันชุบนิกเกิลสำหรับงานอุตสาหกรรม: Bright / Black / Satin / Electroless (EN) รวมถึง Chromium และ Hard Chrome ครอบคลุมทั้งถังแขวน-ถังกลิ้ง เน้นความเงา ความทนการสึก และการกระจายผิว พร้อมทีมเทคนิคดูหน้างาน.">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/nickelplating/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingnickelsatin/index.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
@@ -23,7 +23,7 @@
   <meta property="og:locale:alternate" content="en_US">
   <meta property="og:title" content="น้ำยาชุบนิกเกิล (Nickel Plating Solutions) | Baume Chemical">
   <meta property="og:description" content="Bright / Black / Satin / EN / Chromium / Hard Chrome สำหรับ Rack/Barrel เงาสูง กระจายผิวเยี่ยม ทนทาน.">
-  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/nickelplating/">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingnickelsatin/index.html">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-3.jpg">
   <meta property="og:image:alt" content="Nickel plating bath with bright finish">
   <meta name="twitter:card" content="summary_large_image">
@@ -31,7 +31,7 @@
   <!-- JSON-LD -->
   <script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","name":"Baume Chemical","url":"https://www.baumechemical.com/","logo":"https://www.baumechemical.com/assets/logo.png","sameAs":["https://line.me/ti/p/~baumechemical"]}</script>
   <script type="application/ld+json">{"@context":"https://schema.org","@type":"CollectionPage","name":"Nickel Plating Solutions","inLanguage":"th","url":"https://www.baumechemical.com/products/platingcoating/nickelplating/","description":"Bright Nickel, Black Nickel, Satin Nickel, Electroless Nickel (EN), plus Chromium and Hard Chrome options for rack and barrel lines."}</script>
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},{"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},{"@type":"ListItem","position":3,"name":"Nickel Plating Solutions","item":"https://www.baumechemical.com/products/platingcoating/nickelplating/"}]}</script>
+  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},{"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},{"@type":"ListItem","position":3,"name":"Nickel Plating Solutions","item":"https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingnickelsatin/index.html"}]}</script>
   <script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Nickel & Chrome Systems","itemListOrder":"https://schema.org/ItemListOrderAscending","itemListElement":[{"@type":"ListItem","position":1,"url":"#bright"},{"@type":"ListItem","position":2,"url":"#black"},{"@type":"ListItem","position":3,"url":"#satin"},{"@type":"ListItem","position":4,"url":"#electroless"},{"@type":"ListItem","position":5,"url":"#chrome"},{"@type":"ListItem","position":6,"url":"#hardchrome"}]}</script>
 
   <!-- Fonts -->
