--- a/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
@@ -8,7 +8,7 @@
   <!-- SEO base -->
   <meta name="description" content="Black Nickel Salt เกลือนิเกิ้ลดำสำหรับผสมน้ำยาชุบนิกเกิลดำ: หลักการ กระบวนการ คุณสมบัติ การใช้งาน ค่าเบื้องต้นการทำงาน ตัวอย่างสูตรผสม และคำแนะนำการดูแลบ่อ">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
-  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/blacknickel/index.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
@@ -21,7 +21,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="Black Nickel Salt — เกลือนิเกิ้ลดำ">
   <meta property="og:description" content="เกลือนิเกิ้ลดำสำหรับการชุบนิกเกิลดำ: จุดเด่น วิธีผสม ค่าเบื้องต้น และคำแนะนำการใช้งาน">
-  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/blacknickel/index.html">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html">
   <meta property="og:image" content="https://i.imgur.com/IGRAqiw.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
@@ -35,7 +35,7 @@
   "brand": {"@type": "Brand","name": "Baume Chemical"},
   "category": "Black Nickel Plating",
   "inLanguage": "th",
-  "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/platingcoating/blacknickel/index.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
+  "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
   "aggregateRating": {"@type":"AggregateRating","ratingValue":"5","reviewCount":"10"}
 }
 </script>
@@ -218,10 +218,7 @@
       <section id="intro" class="reveal section-block" aria-labelledby="intro-h">
         <h2 id="intro-h" class="section" data-i18n-key="intro_h">การชุบนิกเกิลดำคืออะไร?</h2>
         <div class="content">
-          <p data-i18n-key="intro_p1">
-            การชุบนิกเกิลดำเป็นกระบวนการทางไฟฟ้าเคมี (Electroplating) โดยมีนิกเกิลซัลเฟตเป็นหลัก ร่วมกับสารประกอบอย่างซิงค์ซัลเฟตหรือแอมโมเนียมซัลเฟต
-            ซึ่งส่งผลต่อเฉดสีและความสม่ำเสมอของผิวเคลือบ สีดำที่ได้มักเป็นผลิตภัณฑ์ร่วมของนิกเกิลกับสังกะสี/ซัลเฟอร์และ/หรือออกไซด์ จึงได้โทนตั้งแต่ดำอมเทาจนถึงดำสนิท ไม่ใช่นิกเกิลบริสุทธิ์ล้วน
-          </p>
+          <p data-i18n-key="intro_p1">การชุบนิกเกิลดำเป็นกระบวนการทางไฟฟ้าเคมี (Electroplating) ที่ใช้เคลือบผิวโลหะเพื่อให้ได้ ผิวสีดำด้านถึงดำสนิท แทนการเคลือบด้วยนิกเกิลเงาวาวทั่วไป การชุบนิกเกิลดำช่วยลดการสะท้อนของแสงได้ดีเยี่ยมและยังเพิ่มความทนทานต่อการกัดกร่อน ทำให้เหมาะสำหรับชิ้นงานที่ต้องการทั้งความสวยงามและประสิทธิภาพ</p>
         </div>
       </section>
 
@@ -312,7 +309,7 @@
               </svg>
             </div>
             <h3 class="features__title" data-i18n-key="feat_6_t">ทนทานเมื่อซีลผิว</h3>
-            <p class="features__desc" data-i18n-key="feat_6_d">เพิ่มความทนกัดกร่อนด้วย <strong>Topcoat/Sealer</strong> ตามงานตกแต่ง</p>
+            <p class="features__desc" data-i18n-key="feat_6_d">เพิ่มความทนกัดกร่อนด้วย <strong>น้ำยาเคลือบหรือแลกเกอร์</strong> ตามงานตกแต่ง</p>
           </article>
         </div>
       </section>
@@ -391,10 +388,10 @@
         <div class="content">
           <p data-i18n-key="mix_steps_h" class="lead">วิธีผสม (แนวทาง)</p>
           <ul>
-            <li data-i18n-key="mix_s1">เติมน้ำ ~2/3 ของถัง</li>
-            <li data-i18n-key="mix_s2">ละลายเกลือนิเกิ้ลดำในน้ำอุ่นจนหมด (ช่วยละลายเร็วขึ้น)</li>
-            <li data-i18n-key="mix_s3">เทสารละลายลงถังหลัก</li>
-            <li data-i18n-key="mix_s4">เติมน้ำกลั่นให้ครบปริมาตร → ตั้งระบบกรองหมุนเวียนจนสารละลายใส</li>
+            <li data-i18n-key="mix_s1">เติมน้ำ ~2/3 ของถัง การเว้นพื้นที่ไว้จะช่วยให้คุณสามารถคนหรือผสมสารเคมีได้ง่ายและปลอดภัยขึ้น</li>
+            <li data-i18n-key="mix_s2">ละลายเกลือนิเกิ้ลดำในน้ำอุ่นจนหมด ตรวจสอบให้แน่ใจว่าเกลือละลายหมดจด เพราะสารที่ละลายไม่หมดอาจส่งผลต่อความสม่ำเสมอของสารละลายหลักในภายหลัง</li>
+            <li data-i18n-key="mix_s3">เมื่อละลายเกลือในน้ำอุ่นจนเป็นเนื้อเดียวกันแล้ว ให้ค่อย ๆ เทสารละลายจากภาชนะแยกนี้ลงในถังหลักที่เตรียมไว้ในขั้นตอนแรก</li>
+            <li data-i18n-key="mix_s4">เติมน้ำสะอาดที่เหลือจนครบปริมาตรที่ต้องการ จากนั้นให้เปิดระบบกรองหมุนเวียน รอจนกว่าสารละลายในถังจะใสและไม่มีสิ่งเจือปน</li>
           </ul>
         </div>
       </section>
@@ -404,11 +401,11 @@
         <h2 id="usage-h" class="section" data-i18n-key="usage_h">คำแนะนำการใช้งาน</h2>
         <div class="content">
           <ul>
-            <li data-i18n-key="use_1"><strong>ชิ้นงานทองเหลือง/ทองแดง:</strong> ลงนิกเกิลดำได้ทันทีหลังเตรียมผิว</li>
-            <li data-i18n-key="use_2"><strong>ชิ้นงานเหล็ก:</strong> ควรมีชั้น “นิกเกิลเงา” รองพื้นก่อน เพื่อให้ดำติดสวยและสม่ำเสมอ</li>
-            <li data-i18n-key="use_3"><strong>การเตรียมผิว:</strong> ล้างด่าง → ล้างน้ำ → Activate กรดอ่อน → ล้างน้ำ ตามมาตรฐานงานนิกเกิล</li>
-            <li data-i18n-key="use_4"><strong>การควบคุมโทน:</strong> ปรับ pH/อุณหภูมิ/แรงดัน/ความหนาแน่นกระแส เพื่อเลื่อนโทนดำตามที่ต้องการ</li>
-            <li data-i18n-key="use_5"><strong>Topcoat/Sealer:</strong> เพิ่มความทนทานรอยขีดข่วนและกัดกร่อนสำหรับงานตกแต่ง</li>
+            <li data-i18n-key="use_1">สำหรับชิ้นงานที่ทำจาก ทองเหลือง หรือ ทองแดง สามารถนำไปชุบนิกเกิลดำได้โดยตรง ไม่จำเป็นต้องมีชั้นนิกเกิลเงาเป็นรองพื้นก่อน เนื่องจากโลหะทั้งสองชนิดนี้มีคุณสมบัติที่เข้ากันได้ดีกับกระบวนการชุบนิกเกิลดำ</li>
+            <li data-i18n-key="use_2">ส่วนชิ้นงานที่ทำจาก เหล็ก จำเป็นต้องมี ชั้นนิกเกิลเงารองพื้น ก่อนการชุบนิกเกิลดำ เพื่อให้การยึดเกาะระหว่างชั้นเคลือบกับผิวชิ้นงานดีขึ้นและมีความทนทานสูง ป้องกันการเกิดสนิมหรือการหลุดร่อนของผิวเคลือบในภายหลัง</li>
+            <li data-i18n-key="use_3">การเตรียมผิว: ต้องทำตามลำดับที่ถูกต้อง เริ่มจาก ล้างด่างเพื่อกำจัดคราบไขมัน ตามด้วยล้างน้ำ แล้ว Activate ด้วยกรดอ่อนเพื่อเปิดผิวโลหะ และล้างน้ำอีกครั้งก่อนการชุบ</li>
+            <li data-i18n-key="use_4">การควบคุมโทน: สามารถปรับเฉดสีของนิกเกิลดำได้โดยการควบคุม pH, อุณหภูมิ, แรงดัน, และ ความหนาแน่นกระแสไฟ</li>
+            <li data-i18n-key="use_5">น้ำยาเคลือบหรือแลกเกอร์: สำหรับชิ้นงานตกแต่งที่ต้องการความทนทานสูง ควร เคลือบด้วยน้ำยาเคลือบหรือแลกเกอร์ทับหน้า เพื่อป้องกันรอยขีดข่วนและเพิ่มอายุการใช้งาน</li>
           </ul>
         </div>
       </section>
@@ -418,9 +415,9 @@
         <h2 id="maint-h" class="section" data-i18n-key="maint_h">การปรับเติมน้ำยา & ความปลอดภัย</h2>
         <div class="content">
           <ul>
-            <li data-i18n-key="maint_1"><strong>ติดตามค่าโบเม่:</strong> เป้าประมาณ 9–10 หากต่ำ เติมตามคู่มือและตรวจด้วย Hull-cell</li>
-            <li data-i18n-key="maint_2"><strong>กรองต่อเนื่อง:</strong> ไส้กรอง 10 µm เพื่อความใสและโทนสีคงที่</li>
-            <li data-i18n-key="maint_3"><strong>PPE:</strong> สวมถุงมือ แว่นตานิรภัย หน้ากาก และปฏิบัติตามมาตรการความปลอดภัยเคมี</li>
+            <li data-i18n-key="maint_1">การควบคุมคุณภาพของสารละลายชุบถือเป็นสิ่งสำคัญอย่างยิ่ง โดยค่า โบเม่ (Baumé) ซึ่งเป็นหน่วยวัดความหนาแน่นของสารละลาย ควรได้รับการตรวจสอบอย่างสม่ำเสมอให้อยู่ในช่วง ~9–10. หากค่าที่วัดได้ต่ำกว่าเกณฑ์ที่กำหนด ควรเติมสารเคมีตามปริมาณที่ระบุไว้ในคู่มือการใช้งาน และควรทำการทดสอบด้วย เซลล์ฮัลล์ (Hull Cell) เพิ่มเติม เพื่อประเมินประสิทธิภาพของสารละลายและปรับสัดส่วนสารเคมีให้เหมาะสมก่อนที่จะเริ่มชุบจริง</li>
+            <li data-i18n-key="maint_2">เพื่อให้สารละลายชุบมีความสะอาดและปราศจากสิ่งเจือปน ควรเปิดระบบการ กรองต่อเนื่อง โดยใช้ไส้กรองที่มีความละเอียด 10 ไมโครเมตร (µm). การกรองจะช่วยขจัดอนุภาคขนาดเล็กที่อาจปนเปื้อนในสารละลาย ทำให้ผิวชิ้นงานที่ได้มีความใสและสีของผิวเคลือบมีความสม่ำเสมอ. การกรองอย่างสม่ำเสมอจะช่วยรักษาสมดุลของน้ำยาและยืดอายุการใช้งานของสารละลายได้อีกด้วย</li>
+            <li data-i18n-key="maint_3">ควรใช้อุปกรณ์ป้องกันส่วนบุคคล (PPE) อย่างเคร่งครัด ได้แก่ ถุงมือที่ทนสารเคมี เพื่อป้องกันการสัมผัสโดยตรง, แว่นตานิรภัย เพื่อป้องกันสารเคมีกระเด็นเข้าตา, และ หน้ากาก เพื่อป้องกันการสูดดมไอระเหยหรือละอองสารเคมีที่เป็นอันตราย การสวมใส่อุปกรณ์เหล่านี้จะช่วยลดความเสี่ยงต่ออันตรายที่อาจเกิดขึ้นได้อย่างมีประสิทธิภาพ</li>
           </ul>
         </div>
       </section>
@@ -491,7 +488,7 @@
         toc_title:"สารบัญ", toc_features:"จุดเด่น", toc_params:"ค่าเบื้องต้น", toc_makeup:"ตัวอย่างการผสม", toc_usage:"คำแนะนำการใช้งาน", toc_maint:"การปรับเติม & ความปลอดภัย",
 
         intro_h:"การชุบนิกเกิลดำคืออะไร?",
-        intro_p1:"การชุบนิกเกิลดำเป็นกระบวนการทางไฟฟ้าเคมี (Electroplating) โดยมีนิกเกิลซัลเฟตเป็นหลัก ร่วมกับสารประกอบอย่างซิงค์ซัลเฟตหรือแอมโมเนียมซัลเฟต ซึ่งส่งผลต่อเฉดสีและความสม่ำเสมอของผิวเคลือบ สีดำที่ได้มักเป็นผลิตภัณฑ์ร่วมของนิกเกิลกับสังกะสี/ซัลเฟอร์และ/หรือออกไซด์ จึงได้โทนตั้งแต่ดำอมเทาจนถึงดำสนิท ไม่ใช่นิกเกิลบริสุทธิ์ล้วน",
+        intro_p1:"การชุบนิกเกิลดำเป็นกระบวนการทางไฟฟ้าเคมี (Electroplating) ที่ใช้เคลือบผิวโลหะเพื่อให้ได้ ผิวสีดำด้านถึงดำสนิท แทนการเคลือบด้วยนิกเกิลเงาวาวทั่วไป การชุบนิกเกิลดำช่วยลดการสะท้อนของแสงได้ดีเยี่ยมและยังเพิ่มความทนทานต่อการกัดกร่อน ทำให้เหมาะสำหรับชิ้นงานที่ต้องการทั้งความสวยงามและประสิทธิภาพ",
 
         features_h:"จุดเด่นของเกลือนิเกิ้ลดำ",
         features_lead:"ผิวดำสวยสม่ำเสมอ ควบคุมโทนได้ ใช้งานได้ทั้งงานตกแต่งและงานเทคนิค",
@@ -500,30 +497,30 @@
         feat_3_t:"ความสม่ำเสมอสูง", feat_3_d:"โทนสีคงที่ในซอกลึกเมื่อควบคุมค่าเบื้องต้นให้เหมาะสม",
         feat_4_t:"ปรับโทนด้วย pH/แรงดัน", feat_4_d:"ควบคุมโทนด้วย pH โวลต์ A/dm² และอุณหภูมิ",
         feat_5_t:"รองรับหลายวัสดุ", feat_5_d:"ทองเหลือง/ทองแดงลงได้เลย เหล็กควรมีนิกเกิลเงารองพื้น",
-        feat_6_t:"ทนทานเมื่อซีลผิว", feat_6_d:"เพิ่มความทนกัดกร่อนด้วย Topcoat/Sealer",
+        feat_6_t:"ทนทานเมื่อซีลผิว", feat_6_d:"เพิ่มความทนกัดกร่อนด้วยน้ำยาเคลือบหรือแลกเกอร์",
 
         params_h:"ค่าเบื้องต้นการทำงาน",
         params_lead:"ตั้งค่าเบื้องต้นสำหรับบ่อนิกเกิลดำ (ตรวจสอบด้วย Hull-cell หน้างานจริง)",
         params_th_p:"ค่าเบื้องต้น", params_th_r:"ช่วง", params_th_c:"ค่ากลาง",
-        params_comp:"Black Nickel Salt", params_temp:"อุณหภูมิ", params_anode:"ขั้วแอโนด", params_volt:"แรงดัน (V)", params_cd:"ความหนาแน่นกระแส",
+        params_comp:"เกลือนิเกิ้ลดำ", params_temp:"อุณหภูมิ", params_anode:"ขั้วแอโนด", params_volt:"แรงดัน (V)", params_cd:"ความหนาแน่นกระแส",
         params_note:"* ควรกรองแบบหมุนเวียนต่อเนื่อง (10 µm) เพื่อความสม่ำเสมอของชั้นเคลือบ",
 
         makeup_h:"ตัวอย่างการผสมน้ำยา",
         mix_vol:"ปริมาตร", mix_salt:"เกลือนิเกิ้ลดำ", mix_water:"น้ำกลั่น",
         mix_steps_h:"วิธีผสม (แนวทาง)",
-        mix_s1:"เติมน้ำ ~2/3 ของถัง", mix_s2:"ละลายเกลือนิเกิ้ลดำในน้ำอุ่นจนหมด", mix_s3:"เทสารละลายลงถังหลัก", mix_s4:"เติมน้ำให้ครบ ปรับกรองหมุนเวียนจนใส",
+        mix_s1:"เติมน้ำ ~2/3 ของถัง  การเว้นพื้นที่ไว้จะช่วยให้คุณสามารถคนหรือผสมสารเคมีได้ง่ายและปลอดภัยขึ้น", mix_s2:"ละลายเกลือนิเกิ้ลดำในน้ำอุ่นจนหมด ตรวจสอบให้แน่ใจว่าเกลือละลายหมดจด เพราะสารที่ละลายไม่หมดอาจส่งผลต่อความสม่ำเสมอของสารละลายหลักในภายหลัง", mix_s3:"เมื่อละลายเกลือในน้ำอุ่นจนเป็นเนื้อเดียวกันแล้ว ให้ค่อย ๆ เทสารละลายจากภาชนะแยกนี้ลงในถังหลักที่เตรียมไว้ในขั้นตอนแรก", mix_s4:"เติมน้ำสะอาดที่เหลือจนครบปริมาตรที่ต้องการ จากนั้นให้เปิดระบบกรองหมุนเวียน รอจนกว่าสารละลายในถังจะใสและไม่มีสิ่งเจือปน",
 
         usage_h:"คำแนะนำการใช้งาน",
-        use_1:"ชิ้นงานทองเหลือง/ทองแดง: ลงนิกเกิลดำได้ทันที",
-        use_2:"ชิ้นงานเหล็ก: ควรมีชั้นนิกเกิลเงารองพื้นก่อน",
-        use_3:"การเตรียมผิว: ล้างด่าง → ล้างน้ำ → Activate กรดอ่อน → ล้างน้ำ",
-        use_4:"การควบคุมโทน: ปรับ pH/อุณหภูมิ/แรงดัน/ความหนาแน่นกระแส",
-        use_5:"Topcoat/Sealer: เพิ่มความทนทานสำหรับงานตกแต่ง",
+        use_1:"สำหรับชิ้นงานที่ทำจาก ทองเหลือง หรือ ทองแดง สามารถนำไปชุบนิกเกิลดำได้โดยตรง ไม่จำเป็นต้องมีชั้นนิกเกิลเงาเป็นรองพื้นก่อน เนื่องจากโลหะทั้งสองชนิดนี้มีคุณสมบัติที่เข้ากันได้ดีกับกระบวนการชุบนิกเกิลดำ",
+        use_2:"ส่วนชิ้นงานที่ทำจาก เหล็ก จำเป็นต้องมี ชั้นนิกเกิลเงารองพื้น ก่อนการชุบนิกเกิลดำ เพื่อให้การยึดเกาะระหว่างชั้นเคลือบกับผิวชิ้นงานดีขึ้นและมีความทนทานสูง ป้องกันการเกิดสนิมหรือการหลุดร่อนของผิวเคลือบในภายหลัง",
+        use_3:"การเตรียมผิว: ต้องทำตามลำดับที่ถูกต้อง เริ่มจาก ล้างด่างเพื่อกำจัดคราบไขมัน ตามด้วยล้างน้ำ แล้ว Activate ด้วยกรดอ่อนเพื่อเปิดผิวโลหะ และล้างน้ำอีกครั้งก่อนการชุบ",
+        use_4:"การควบคุมโทน: สามารถปรับเฉดสีของนิกเกิลดำได้โดยการควบคุม pH, อุณหภูมิ, แรงดัน, และ ความหนาแน่นกระแสไฟ",
+        use_5:"น้ำยาเคลือบหรือแลกเกอร์: สำหรับชิ้นงานตกแต่งที่ต้องการความทนทานสูง ควร เคลือบด้วยน้ำยาเคลือบหรือแลกเกอร์ทับหน้า เพื่อป้องกันรอยขีดข่วนและเพิ่มอายุการใช้งาน",
 
         maint_h:"การปรับเติมน้ำยา & ความปลอดภัย",
-        maint_1:"ติดตามค่าโบเม่ ~9–10 หากต่ำ เติมตามคู่มือและตรวจ Hull-cell",
-        maint_2:"กรองต่อเนื่อง 10 µm เพื่อความใสและโทนคงที่",
-        maint_3:"PPE: ถุงมือ แว่นตานิรภัย หน้ากาก",
+        maint_1:"การควบคุมคุณภาพของสารละลายชุบถือเป็นสิ่งสำคัญอย่างยิ่ง โดยค่า โบเม่ (Baumé) ซึ่งเป็นหน่วยวัดความหนาแน่นของสารละลาย ควรได้รับการตรวจสอบอย่างสม่ำเสมอให้อยู่ในช่วง ~9–10. หากค่าที่วัดได้ต่ำกว่าเกณฑ์ที่กำหนด ควรเติมสารเคมีตามปริมาณที่ระบุไว้ในคู่มือการใช้งาน และควรทำการทดสอบด้วย เซลล์ฮัลล์ (Hull Cell) เพิ่มเติม เพื่อประเมินประสิทธิภาพของสารละลายและปรับสัดส่วนสารเคมีให้เหมาะสมก่อนที่จะเริ่มชุบจริง",
+        maint_2:"เพื่อให้สารละลายชุบมีความสะอาดและปราศจากสิ่งเจือปน ควรเปิดระบบการ กรองต่อเนื่อง โดยใช้ไส้กรองที่มีความละเอียด 10 ไมโครเมตร (µm). การกรองจะช่วยขจัดอนุภาคขนาดเล็กที่อาจปนเปื้อนในสารละลาย ทำให้ผิวชิ้นงานที่ได้มีความใสและสีของผิวเคลือบมีความสม่ำเสมอ การกรองอย่างสม่ำเสมอจะช่วยรักษาสมดุลของน้ำยาและยืดอายุการใช้งานของสารละลายได้อีกด้วย",
+        maint_3:"ควรใช้อุปกรณ์ป้องกันส่วนบุคคล (PPE) อย่างเคร่งครัด ได้แก่ ถุงมือที่ทนสารเคมี เพื่อป้องกันการสัมผัสโดยตรง, แว่นตานิรภัย เพื่อป้องกันสารเคมีกระเด็นเข้าตา, และ หน้ากาก เพื่อป้องกันการสูดดมไอระเหยหรือละอองสารเคมีที่เป็นอันตราย การสวมใส่อุปกรณ์เหล่านี้จะช่วยลดความเสี่ยงต่ออันตรายที่อาจเกิดขึ้นได้อย่างมีประสิทธิภาพ",
 
         footer_products:"หมวดผลิตภัณฑ์", footer_contact:"ติดต่อเรา", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       },
@@ -538,7 +535,7 @@
         toc_title:"Contents", toc_features:"Key features", toc_params:"Parameters", toc_makeup:"Make-up examples", toc_usage:"Usage tips", toc_maint:"Maintenance & Safety",
 
         intro_h:"What is black nickel plating?",
-        intro_p1:"Black nickel plating is an electrochemical process based on nickel sulfate with co-additives such as zinc sulfate or ammonium salts. The black color arises from nickel compounds with zinc/sulfur and/or oxides, yielding tones from gray-black to deep black—i.e., not pure nickel.",
+        intro_p1:"Black nickel plating is an electrochemical process (electroplating) used to coat metal surfaces to achieve a matte to deep black finish, as an alternative to the typical bright nickel plating. This type of plating is excellent for reducing light reflection and also improves corrosion resistance, making it ideal for parts that require both aesthetic appeal and functionality.",
 
         features_h:"Black Nickel Salt Highlights",
         features_lead:"Uniform deep-black finish with tunable tone for decorative and technical parts.",
