--- a/products/polishing/stainless-electropolishing-solution.html
+++ b/products/polishing/stainless-electropolishing-solution.html
@@ -8,7 +8,7 @@
   <!-- SEO base -->
   <meta name="description" content="EP 8511 น้ำยากัดเงาสแตนเลสแบบใช้ไฟฟ้า: หลักการทำงาน ประโยชน์ สเปกการใช้งาน พารามิเตอร์ (50–80 °C, 4–9 V, 15–45 A/dm²) ขั้นตอนกระบวนการ ดูแลบ่อ และความปลอดภัย EHS">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
-  <link rel="canonical" href="https://www.baumechemical.com/products/finishing/electropolishing/index.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/polishing/stainless-electropolishing-solution.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
@@ -21,8 +21,8 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="EP 8511 — น้ำยากัดเงาสแตนเลส (Electropolishing)">
   <meta property="og:description" content="คู่มือฉบับหน้างาน: หลักการทำงาน ขั้นตอน พารามิเตอร์ อุปกรณ์ และความปลอดภัยสำหรับการกัดเงาสแตนเลสแบบใช้ไฟฟ้า">
-  <meta property="og:url" content="https://www.baumechemical.com/products/finishing/electropolishing/index.html">
-  <meta property="og:image" content="https://images.unsplash.com/photo-1503387762-592deb58ef4e?auto=format&fit=crop&w=1600&q=80">
+  <meta property="og:url" content="https://www.baumechemical.com/products/polishing/stainless-electropolishing-solution.html">
+  <meta property="og:image" content="https://i.imgur.com/RJXWvbW.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
   <script type="application/ld+json">
@@ -31,11 +31,11 @@
     "@type": "Product",
     "name": "EP 8511 — Electropolishing for Stainless Steel",
     "description": "Electropolishing electrolyte for stainless steel: mirror finish, improved corrosion resistance, wide operating window (50–80 °C, 4–9 V, 15–45 A/dm²), halogen/chromate-free.",
-    "image": "https://images.unsplash.com/photo-1503387762-592deb58ef4e?auto=format&fit=crop&w=1600&q=80",
+    "image": "https://i.imgur.com/RJXWvbW.jpeg",
     "brand": {"@type":"Brand","name":"Baume Chemical"},
     "category": "Electropolishing",
     "inLanguage": "th",
-    "offers": {"@type":"Offer","url":"https://www.baumechemical.com/products/finishing/electropolishing/index.html","priceCurrency":"THB","price":"0.00","availability":"https://schema.org/InStock"},
+    "offers": {"@type":"Offer","url":"https://www.baumechemical.com/products/polishing/stainless-electropolishing-solution.html","priceCurrency":"THB","price":"0.00","availability":"https://schema.org/InStock"},
     "aggregateRating": {"@type":"AggregateRating","ratingValue":"5","reviewCount":"12"}
   }
   </script>
@@ -45,7 +45,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://flagcdn.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://images.unsplash.com/photo-1503387762-592deb58ef4e?auto=format&fit=crop&w=1600&q=80"/>
+  <link rel="preload" as="image" href="https://i.imgur.com/RJXWvbW.jpeg"/>
 
   <style>
     :root{
@@ -53,7 +53,7 @@
       --radius:14px; --shadow-1:0 8px 26px rgba(2,8,20,.06); --shadow-2:0 16px 40px rgba(2,8,20,.14);
       --logo-url:url('https://img2.pic.in.th/pic/Baume.jpg');
       --header-h:64px; --container:1200px;
-      --hero-url:url('https://images.unsplash.com/photo-1503387762-592deb58ef4e?auto=format&fit=crop&w=1600&q=80');
+      --hero-url:url('https://i.imgur.com/RJXWvbW.jpeg');
     }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0}
