--- a/products/polishing/brass-electropolishing-solution.html
+++ b/products/polishing/brass-electropolishing-solution.html
@@ -8,7 +8,7 @@
   <!-- SEO base -->
   <meta name="description" content="LASER B น้ำยากัด/จุ่มเงาทองเหลือง: หลักการทำงาน คุณสมบัติเด่น อัตราส่วนผสม ขั้นตอนการใช้งาน การดูแลรักษาบ่อ และข้อควรระวัง — เงางาม คงทน ปลอดควันไนตริก">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
-  <link rel="canonical" href="https://www.baumechemical.com/products/polishing/brass-polishing/index.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/polishing/brass-electropolishing-solution.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
@@ -21,8 +21,8 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="LASER B — น้ำยากัด/จุ่มเงาทองเหลือง">
   <meta property="og:description" content="คู่มือใช้งานแบบหน้างานจริง: อัตราส่วนผสม ขั้นตอนการจุ่ม การปรับเติม และทิปส์ได้ผิวทองเหลืองเงางามทนหมอง">
-  <meta property="og:url" content="https://www.baumechemical.com/products/polishing/brass-polishing/index.html">
-  <meta property="og:image" content="https://images.unsplash.com/photo-1519689661119-6aa8b67a9e22?auto=format&fit=crop&w=1600&q=70">
+  <meta property="og:url" content="https://www.baumechemical.com/products/polishing/brass-electropolishing-solution.html">
+  <meta property="og:image" content="https://i.imgur.com/wEo6YIQ.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
   <script type="application/ld+json">
@@ -31,11 +31,11 @@
   "@type": "Product",
   "name": "LASER B — Brass Brightening/Polishing",
   "description": "กรดสูตรพิเศษสำหรับกัด/จุ่มเงาทองเหลือง กำจัดออกไซด์ คราบแดง ให้ผิวเงาทนหมอง ปลอดควันไนตริก ใช้ได้ทั้งถังแขวนและถังกลิ้ง",
-  "image": "https://images.unsplash.com/photo-1519689661119-6aa8b67a9e22?auto=format&fit=crop&w=1600&q=70",
+  "image": "https://i.imgur.com/wEo6YIQ.jpeg",
   "brand": {"@type":"Brand","name":"Baume Chemical"},
   "category": "Brass Polishing",
   "inLanguage": "th",
-  "offers": {"@type":"Offer","url":"https://www.baumechemical.com/products/polishing/brass-polishing/index.html","priceCurrency":"THB","price":"0.00","availability":"https://schema.org/InStock"},
+  "offers": {"@type":"Offer","url":"https://www.baumechemical.com/products/polishing/brass-electropolishing-solution.html","priceCurrency":"THB","price":"0.00","availability":"https://schema.org/InStock"},
   "aggregateRating": {"@type":"AggregateRating","ratingValue":"5","reviewCount":"12"}
 }
   </script>
@@ -45,7 +45,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://flagcdn.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://images.unsplash.com/photo-1519689661119-6aa8b67a9e22?auto=format&fit=crop&w=1600&q=70"/>
+  <link rel="preload" as="image" href="https://i.imgur.com/wEo6YIQ.jpeg"/>
 
   <style>
     :root{
@@ -54,7 +54,7 @@
       --radius:14px; --shadow-1:0 8px 26px rgba(2,8,20,.06); --shadow-2:0 16px 40px rgba(2,8,20,.14);
       --logo-url:url('https://img2.pic.in.th/pic/Baume.jpg');
       --header-h:64px; --container:1200px;
-      --hero-url:url('https://images.unsplash.com/photo-1504270997636-07ddfbd48945?auto=format&fit=crop&w=1600&q=70');
+      --hero-url:url('https://i.imgur.com/wEo6YIQ.jpeg');
     }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0}
@@ -298,7 +298,7 @@
             <li data-i18n-key="principle_b4">รองรับทองเหลืองหลายเกรด รวมถึงชิ้นงานมี Pb สูง</li>
           </ul>
           <figure style="margin:10px 0 0">
-            <img src="https://images.unsplash.com/photo-1606471191009-8a37dc5c1f5d?auto=format&fit=crop&w=1400&q=70" alt="ตัวอย่างพื้นผิวทองเหลืองเงาสูง" style="width:100%;border-radius:12px;box-shadow:var(--shadow-1)">
+            <img src="https://i.imgur.com/wEo6YIQ.jpeg" alt="ตัวอย่างพื้นผิวทองเหลืองเงาสูง" style="width:100%;border-radius:12px;box-shadow:var(--shadow-1)">
           </figure>
         </div>
       </section>
