upload all files

--- a/products/protective/antitarnish-for-copper.html
+++ b/products/protective/antitarnish-for-copper.html
@@ -8,7 +8,7 @@
   <!-- SEO base -->
   <meta name="description" content="น้ำยากันหมองสำหรับทองแดงและทองเหลือง: ใช้เป็นน้ำล้างสุดท้าย ช่วยป้องกันคราบออกไซด์ ไล่คราบน้ำ แห้งเร็ว คงความเงางาม ใช้งาน 2–5% (งาน PCB 50 cc/L) ที่ 20–50 °C จุ่ม 5–15 วินาที ทน Humidity Test ได้ถึง ~200 ชม. ปราศจากโครเมียมเฮกซะวาเลนต์">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
-  <link rel="canonical" href="https://www.baumechemical.com/products/protective/anti-tarnish/copper/index.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/protective/antitarnish-for-copper.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
@@ -21,8 +21,8 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="Anti-Tarnish for Copper — น้ำยากันหมองทองแดง/ทองเหลือง">
   <meta property="og:description" content="ฟิล์มใสปกป้องผิว ป้องกันคราบหมอง ไล่คราบน้ำ แห้งเร็ว ใช้งาน 2–5% (PCB 50 cc/L) 20–50 °C จุ่ม 5–15 วิ.">
-  <meta property="og:url" content="https://www.baumechemical.com/products/protective/anti-tarnish/copper/index.html">
-  <meta property="og:image" content="https://images.unsplash.com/photo-1517202383675-eb0a6e05daaa?q=80&w=1600&auto=format&fit=crop">
+  <meta property="og:url" content="https://www.baumechemical.com/products/protective/antitarnish-for-copper.html">
+  <meta property="og:image" content="https://img2.pic.in.th/pic/image9.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
   <script type="application/ld+json">
@@ -31,11 +31,11 @@
   "@type": "Product",
   "name": "Anti-Tarnish for Copper — น้ำยากันหมองทองแดง/ทองเหลือง",
   "description": "สารป้องกันการหมองสำหรับทองแดงและทองเหลือง ใช้เป็นน้ำล้างสุดท้าย เพื่อสร้างฟิล์มใสกันออกซิเดชัน ไล่คราบน้ำ แห้งเร็ว ใช้งาน 2–5% (PCB 50 cc/L) ที่ 20–50 °C จุ่ม 5–15 วินาที",
-  "image": "https://images.unsplash.com/photo-1517202383675-eb0a6e05daaa?q=80&w=1600&auto=format&fit=crop",
+  "image": "https://img2.pic.in.th/pic/image9.jpeg",
   "brand": {"@type": "Brand","name": "Baume Chemical"},
   "category": "Protective Treatment",
   "inLanguage": "th",
-  "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/protective/anti-tarnish/copper/index.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
+  "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/protective/antitarnish-for-copper.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
   "aggregateRating": {"@type":"AggregateRating","ratingValue":"5","reviewCount":"10"}
 }
 </script>
@@ -45,14 +45,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://flagcdn.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://images.unsplash.com/photo-1517202383675-eb0a6e05daaa?q=80&w=1600&auto=format&fit=crop"/>
+  <link rel="preload" as="image" href="https://img2.pic.in.th/pic/image9.jpeg"/>
 
   <style>
     :root{
       --brand:#2c5e4e; --brand-2:#387b5b; --ink:#0f172a; --muted:#5b6675; --bg:#f4f6f5;
       --radius:14px; --shadow-1:0 8px 26px rgba(2,8,20,.06); --shadow-2:0 16px 40px rgba(2,8,20,.14);
       --logo-url:url('https://img2.pic.in.th/pic/Baume.jpg');
-      --hero-url:url('https://images.unsplash.com/photo-1517202383675-eb0a6e05daaa?q=80&w=1600&auto=format&fit=crop');
+      --hero-url:url('https://img2.pic.in.th/pic/image9.jpeg');
       --header-h:64px; --container:1200px;
     }
     *{box-sizing:border-box}
